<?xml version="1.0"?>
<package>
  <name>ultrasonic_sensors</name>
  <version>0.0.0</version>
  <description>The ultrasonic_sensors package</description>
  <maintainer email="t.m.c.peters@student.tue.nl">ton</maintainer>
  <license>BSD</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial-python</build_depend>
  <run_depend>rosserial-python</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
